用户模块和前台查询查询所有分类模块完成
这次更新一：完成了对于用户账号模块登录、注册、激活、修改密码、退出登录等全部功能的实现，再就是前台的查询模块将数据库全部的一级分类一二级分类都查询出来了，显示功能还没有后面会加上

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -26,8 +26,17 @@
 		<servlet-name>VerifyCodeServlet</servlet-name>
 		<servlet-class>cn.itcast.vcode.servlet.VerifyCodeServlet</servlet-class>
 	</servlet>
+  <servlet>
+    <servlet-name>CategoryServlet</servlet-name>
+    <servlet-class>com.ydg.bookstore.category.web.servlet.CategoryServlet</servlet-class>
+  </servlet>
+
 	<servlet-mapping>
 		<servlet-name>VerifyCodeServlet</servlet-name>
 		<url-pattern>/VerifyCodeServlet</url-pattern>
 	</servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CategoryServlet</servlet-name>
+    <url-pattern>/CategoryServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
