更新了图书模块的一些查询功能以及购物车模块的我的购物车功能
这次更新图书模块更新了按照不停类型的方法查找图书的方法其中包括按照书名模糊查询，按照作者模糊查询，按照bid查询，按照出版社模糊查询，按照作者、书名、出版社的高级模糊查询再就是购物车模块开始了，第一步的查询我的购物车已经解决

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -30,6 +30,16 @@
     <servlet-name>CategoryServlet</servlet-name>
     <servlet-class>com.ydg.bookstore.category.web.servlet.CategoryServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>BookServlet</servlet-name>
+    <servlet-class>com.ydg.bookstore.book.web.servlet.BookServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>CartItemServlet</servlet-name>
+    <servlet-class>com.ydg.bookstore.cart.web.servlet.CartItemServlet</servlet-class>
+  </servlet>
+
+
 
 	<servlet-mapping>
 		<servlet-name>VerifyCodeServlet</servlet-name>
@@ -38,5 +48,13 @@
   <servlet-mapping>
     <servlet-name>CategoryServlet</servlet-name>
     <url-pattern>/CategoryServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>BookServlet</servlet-name>
+    <url-pattern>/BookServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CartItemServlet</servlet-name>
+    <url-pattern>/CartItemServlet</url-pattern>
   </servlet-mapping>
 </web-app>
